--- a/CSS ADVANCED/style.css
+++ b/CSS ADVANCED/style.css
@@ -1,15 +1,16 @@
 /*Comments in this document are the tasks*/
 
 body{
-	margin: 0; 
-	padding: 0;
 	font-style: serif;
 	letter-spacing: 3px;
+	margin: 0;
+	padding: 0;
 
 }
 h1{
 	text-align: center; /*Header with centered Logo*/
-
+	border-bottom: 1px solid;
+	padding-bottom: 30px;
 }
 #header{
 	position: relative;
@@ -26,23 +27,64 @@ h1{
 	width: 100%;
 	height: auto;
 	text-align: center;
-	padding: 10px;
-	color: grey;
+	border-bottom: 1px solid;
+	background-color: blue;
+	
 }
-a{	
+#nav a{	
 	text-decoration: none; 
 	font-size: 20px;
-	padding: 0px;
+	color: white;
+}
+a:hover{
+	background-color: lightgrey;
+	color: black;
 }
 
 #feature{
 	width: 100%; /*Feature section 100% width of the screen size*/
 	height: auto;
-	border: 1px solid;
+}
+#feature p{
+	padding: 20px;
+}
 
+#main{
+	width: 100%;
+	height: auto;
+	background-color: lightgrey;
+	text-align: justify;	
+}
+#main p{
+	text-align: justify;
+	padding: 20px;
+	
+}
+
+.left{
+	display: inline-block;
+	width: 32%;
+	border-right: 1px solid;	
+}
+.center{
+	display: inline-block;
+	width: 33%;
+	border-right: 1px solid;
+}
+.right{
+	display: inline-block;
+	width: 32%;
 }
 
 #footer{
 	text-align: center;
+	width: 100%;
+	clear: both;
+	margin-bottom: 20px;
 }
+
+#footer a{
+	font-size: 25px;
+}
+
 
