--- a/ORFatSander/repstylesheet.css
+++ b/ORFatSander/repstylesheet.css
@@ -1,3 +1,28 @@
+/*Main*/
+body {
+	background-color: #5286C1;
+}
+/*CSS for Nav and Logos*/
+.header {
+	display: block;
+}
+.topbar {
+	display: block;
+}
+.newslogo {
+	display: inline-block;
+}
+.stationlogo {
+	display: inline-block;
+}
+.navbar {
+	display: block;
+	margin: 1%;
+}
+/*CSS for Newscars*/
+.newscardContainer {
+	display: block;
+}
 .newscardContainerLeft {
 	display: inline-block;
 }
