--- a/CSS ADVANCED/style.css
+++ b/CSS ADVANCED/style.css
@@ -7,7 +7,8 @@ body{
 	padding: 0;
 
 }
-h1{
+h1{	
+	font-size: +2;
 	text-align: center; /*Header with centered Logo*/
 	border-bottom: 1px solid;
 	padding-bottom: 30px;
@@ -53,7 +54,8 @@ a:hover{
 	width: 100%;
 	height: auto;
 	background-color: lightgrey;
-	text-align: justify;	
+	text-align: justify;
+	box-shadow: 1px 5px  2px grey;	
 }
 #main p{
 	text-align: justify;
@@ -64,7 +66,8 @@ a:hover{
 .left{
 	display: inline-block;
 	width: 32%;
-	border-right: 1px solid;	
+	border-right: 1px solid;
+
 }
 .center{
 	display: inline-block;
