--- a/CSS ADVANCED/style.css
+++ b/CSS ADVANCED/style.css
@@ -45,6 +45,7 @@ a:hover{
 #feature{
 	width: 100%; /*Feature section 100% width of the screen size*/
 	height: auto;
+	margin-bottom: 30px;
 }
 #feature p{
 	padding: 20px;
@@ -83,11 +84,14 @@ a:hover{
 	text-align: center;
 	width: 100%;
 	clear: both;
+	margin-top: 100px;
 	margin-bottom: 20px;
 }
 
 #footer a{
 	font-size: 25px;
+	text-decoration: none;
+	color: grey;
 }
 
 
