--- a/CSS ADVANCED/style.css
+++ b/CSS ADVANCED/style.css
@@ -9,7 +9,7 @@ body{
 }
 h1{	
 	font-size: +2;
-	text-align: center; /*Header with centered Logo*/
+	text-align: center; 		/*Header with centered Logo*/
 	border-bottom: 1px solid;
 	padding-bottom: 30px;
 }
@@ -22,7 +22,7 @@ h1{
 	height: auto;
 }
 
-#nav{				/*Horizontal navigation menu composed of five navigation links*/
+#nav{						/*Horizontal navigation menu composed of five navigation links*/
 	position: sticky;
 	top:0;
 	width: 100%;
@@ -37,13 +37,13 @@ h1{
 	font-size: 20px;
 	color: white;
 }
-a:hover{
+a:hover{				/*Cursor over a link*/
 	background-color: lightgrey;
 	color: black;
 }
 
 #feature{
-	width: 100%; /*Feature section 100% width of the screen size*/
+	width: 100%; 		/*Feature section 100% width of the screen size*/
 	height: auto;
 	margin-bottom: 30px;
 }
@@ -70,14 +70,28 @@ a:hover{
 	border-right: 1px solid;
 
 }
+.left:hover{
+	opacity: 0.5;
+	background-color: yellow;
+}
 .center{
 	display: inline-block;
 	width: 33%;
 	border-right: 1px solid;
 }
+.center:hover{
+	opacity: 0.5;
+	background-color: pink;
+	
+}
 .right{
 	display: inline-block;
 	width: 32%;
+}
+.right:hover{
+	opacity: 0.5;
+	background-color: blue;
+	color: white;
 }
 
 #footer{
@@ -91,7 +105,11 @@ a:hover{
 #footer a{
 	font-size: 25px;
 	text-decoration: none;
-	color: grey;
+	border: 1px solid;
+	border-color: pink;
+	padding: 5px;
 }
 
-
+a:visited{
+	color: grey;
+}
